=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.026 - Under Development

=over

=item *

Support for Mac OSX has been added!  Currently tested against 10.3.5,
let us know if it works on other versions!  Thanks to Matthew Wood
(matt@nomorefluffybunny.com).  [Peter]

=item *

C<bin/krang_info> now gives story/media stats for each
instance. [Peter]

=item *

Fixed a bug in L<Krang::ElementClass::StoryLink> where elements that
were never linked to stories no longer throw an error, but return
cleanly.  [Michael Peters]

=item *

Mandrake support has been added!  [Matt]

=item *

Fixed browser detection to deal with 1.0 prerelease of Firefox, which
gives a version number of 0.10.  [Aaron Ross]

=back

=head2 v1.025 - October 1, 2004

=over

=item *

Cleaned up error handling in L<Krang::Publisher> and the
C<bin/krang_publish> script - errors are now trapped properly and
reported in a cleaner fashion.  [Peter]

=item *

Fixed a bug in the upgrade process of 1.024.  Users who upgraded to
1.024 should immediately upgrade to 1.025.  [Peter]

=item *

C<bin/krang_publish> and C<bin/krang_delete> now properly interact
with hidden stories. [Peter]

=back


=head2 v1.024 - September 24, 2004

=over

=item *

Send HTTP header with root menu. [Aaron Ross]

=item *

Escape values on login page to foil cross-site scripting attacks. [Perrin]

=item *

Add option to show 100 results per page. [Perrin]

=item *

Restructured the index page in docs/ - added a 'User' section, moved a
few things around to make things easier for new users. [Peter]

=item *

Added C<bin/krang_info> - a simple command-line script to list the
currently configured status of Krang.  [Peter]

=item *

Reordered subroutine exports in L<Krang::Element> to fix a library
loading loop that cropped up under some circumstances.  Thanks to
Michael Peters (mpeters@plusthree.com) for finding it.  [Peter]


=item *
